# customer_support_env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  grading.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py  test_api.py  test_debug.py  test_endpoints.py  test_env.py
docs/: DetailedRequirements.md  EvaluationCriteria.md  IMPLEMENTATION_SUMMARY.md  Pre-Submission-Checklist.md  SampleInferenceScript.md  TESTING.md  cmd_exe.md  problem_st.md
policies/: 1.json  3.json  divide.md
server/: Dockerfile  __init__.py  agent.py  app.py  customerSupportEnv_environment.py  dashboard_template.py  requirements.txt
tasks/easy/: delivery_delay_major.json  delivery_delay_minor.json  refund_missing_info.json
tasks/hard/: payment_duplicate.json  payment_high_value.json  payment_suspicious.json  refund_loyalty_conflict.json
tasks/medium/: delivery_hallucination_trap.json  refund_unused_within_7.json  replacement_damaged_within_10.json
