# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customerSupportEnv"
version = "0.1.0"
description = "Customersupportenv environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "openenv-core[core]>=0.2.1",
    "openai>=1.0.0",
    "pydantic>=2.12.0",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
    "openai>=1.0.0",
    "websockets>=16.0",
    "openenv>=0.1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m customerSupportEnv.server.app
server = "customerSupportEnv.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["customerSupportEnv", "customerSupportEnv.server"]
package-dir = { "customerSupportEnv" = ".", "customerSupportEnv.server" = "server" }
